Further improvement